--- a/runkereads.html
+++ b/runkereads.html
@@ -180,7 +180,7 @@
       </div>
 
       <div class="article">
-        <div class="article-title" onclick="toggleContent(this)">Japanese Steakhouse Secrets: VOLUME 2 ▼</div>
+        <div class="article-title" onclick="toggleContent(this)">Japanese Steakhouse Secrets VOLUME 2 ▼</div>
         <div class="article-content">
           Did you enjoy the hibachi chicken from volume 1? Well, hibachi chicken is never complete without some fried rice!<br>
           Here’s the simple recipe I use to make delicious, easy fried rice. Great as a side—or a meal on its own.<br><br>
