--- a/runkeportal.html
+++ b/runkeportal.html
@@ -55,12 +55,18 @@
     </div>
 
     <div class="box">
-      <p><a href="index">Band Page</a></p>
-      <p><a href="runkereads">Runke Reads</a></p>
-      <p><a href="news">what we've been up to...</a></p>
+      <h><a href="index">Band Page</a></h>
+      <h><a href="runkereads">Runke Reads</a></h>
+      <h><a href="news">what we've been up to...</a></h>
+      <h><a href="https://www.youtube.com/@Glooberez/videos"> Nick's Gaming Channel</h>
+      <h><a href="https://soundcloud.com/swag-daddy-878342681"> Dane's Soundcloud</h>
       
     </div>
-
+<br>
+  <br>
+    <br>
+    <br>
+<br>
     <div class="footer">
       property of runke 2025
     </div>
