--- a/runkeportal.html
+++ b/runkeportal.html
@@ -55,11 +55,11 @@
     </div>
 
     <div class="box">
-      <h><a href="index">Band Page</a></h> <br?
+      <h><a href="index">Band Page</a></h> <br>
       <h><a href="runkereads">Runke Reads</a></h> <br>
       <h><a href="news">what we've been up to...</a></h> <br>
       <h><a href="https://www.youtube.com/@Glooberez/videos"> Nick's Gaming Channel</h> <br>
-      <h><a href="https://soundcloud.com/swag-daddy-878342681"> Dane's Soundcloud</h> <br>
+      <h><a href="https://soundcloud.com/swag-daddy-878342681"> Dane's Soundcloud</h>
       
     </div>
 <br>
